unpackaged/main/default/objects/State__c/fields/External_Country_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Country_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Country Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>